examples/errors/parsing/booleans.cn
main : () [impure] =
  let a = true && false;
  let b = true || false;
  let c = not a;
  if c then () else ()
